starts spacing fix

--- a/resources/assets/styles/pages/home.scss
+++ b/resources/assets/styles/pages/home.scss
@@ -217,6 +217,9 @@
   }
   &__stars {
     margin-bottom: 9px;
+    img {
+      margin-right: 9px;
+    }
   }
   &__img {
     background-size: cover;
